# MOOOOOOCAP

./: .gitignore  LICENSE  README.md  USAGE.md  config.example.yaml  download_models.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py
docs/: ARCHITECTURE.md  LICENSING.md
mcap/: __init__.py  app.py
mcap/core/: bvh.py  calibration.py  capture.py  filtering.py  pose.py  processor.py  retarget.py  session.py
mcap/gui/: __init__.py  calibration_dialog.py  main_window.py
mocap/: __init__.py
mocap/config/: __init__.py  settings.py
mocap/core/: __init__.py  depth_estimator.py  hand_analyzer.py  motion_capture.py  pose_estimator.py  temporal_filter.py
mocap/data/: __init__.py  motion_data.py  skeleton.py
mocap/gui/: __init__.py  controls.py  hand_panel.py  main_window.py  settings_dialog.py  skeleton_3d.py  timeline.py  video_panel.py
mocap/utils/: __init__.py  math_utils.py  video_utils.py
mocap_app/: __init__.py  app.py  cli.py  config.py  types.py
mocap_app/core/: __init__.py  config.py  pipeline.py  types.py
mocap_app/export/: __init__.py  bvh_export.py  csv_export.py  exporters.py  json_export.py
mocap_app/filters/: __init__.py  one_euro.py  smoothing.py
mocap_app/gui/: __init__.py  control_panel.py  main_window.py  video_widget.py  video_worker.py  visualization_widget.py
mocap_app/models/: __init__.py  detector.py  model_loader.py  pose_estimator.py
mocap_app/pipeline/: __init__.py  processor.py
mocap_app/tracking/: __init__.py  bytetrack.py  track.py
models/: README.md
scripts/: download_models.py
(+11 files in other folders)
